Fixed overflowing modal container

--- a/sutoringu.css
+++ b/sutoringu.css
@@ -57,8 +57,8 @@ canvas {
 .modal-content {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 #808080;
     background-color: #fff;
-    margin: 10% auto;
-    padding: 20px;
+    margin: auto;
+    padding: 16px;
     border: 1px solid #808080;
     width: 800px;
     overflow-y: auto;
